# cmake-sandbox

./: CMakeLists.txt  README.md  hello.cc  hello.proto  helloworld.proto  setup.sh
